Experiment using --illegal-access=deny to flush out missing opens