@@ -156,6 +156,7 @@ Param(
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.management/javax.management=ALL-UNNAMED"
         # InitialContext proxy generation requires deep reflection in javax.naming
         $DEFAULT_MODULAR_JVM_OPTIONS += "--add-opens=java.naming/javax.naming=ALL-UNNAMED"
+        $DEFAULT_MODULAR_JVM_OPTIONS += "--illegal-access=deny"
     }
     return $DEFAULT_MODULAR_JVM_OPTIONS
 }
